--- a/presentations.qmd
+++ b/presentations.qmd
@@ -1,4 +1,4 @@
 # Presentations
 
 
-![psy-300-1introduction](presentations/psy-300-1introduction.pdf){width=60% height=400}
+![psy-300-1_introduction](presentations/psy-300-1_introduction.pdf){width=60% height=400}
