--- a/presentations.qmd
+++ b/presentations.qmd
@@ -16,8 +16,6 @@
 
 ![psy-300-3_distributions](presentations/psy-300-3_distributions.pdf){width="60%" height="400"}
 
-
-
      
 
 -   **Lecture 4: Sampling Distribution and Confidence Interval**
@@ -25,6 +23,11 @@
 ![psy-300-4_sampling_distribution](presentations/psy-300-4_sampling_distribution.pdf){width="60%" height="400"}
 
 
+     
+
+-   **Lecture 5: Hypothesis testing**
+
+![psy-300-5_hypothesis_testing](presentations/psy-300-5_hypothesis_testing.pdf){width="60%" height="400"}
 
 
 
