--- a/data.qmd
+++ b/data.qmd
@@ -13,13 +13,13 @@ library(readxl)
 creatinine <- read_excel(here("data", "creatinine.xlsx"))
 depression <- read_excel(here("data", "depression.xlsx"))
 weight <- read_excel(here("data", "weight.xlsx"))
+dataDWL <- read_excel(here("data", "dataDWL.xlsx"))
 
 ```
 
- 
- 
+   
 
-- **Dataset: creatinine**
+-   **Dataset: creatinine**
 
 ```{r}
 #| echo: false
@@ -39,13 +39,9 @@ DT::datatable(creatinine, extensions = c('Scroller', 'Buttons'), rownames = FALS
 
 ```
 
+   
 
- 
- 
-
-
-- **Dataset: depression**
-
+-   **Dataset: depression**
 
 ```{r}
 #| echo: false
@@ -65,11 +61,9 @@ DT::datatable(depression, extensions = c('Scroller', 'Buttons'), rownames = FALS
 
 ```
 
- 
- 
+   
 
-
-- **Dataset: weight**
+-   **Dataset: weight**
 
 ```{r}
 #| echo: false
@@ -88,3 +82,27 @@ DT::datatable(weight, extensions = c('Scroller', 'Buttons'), rownames = FALSE,
       ))))
 
 ```
+
+   
+
+-   **Dataset: dataDWL**
+
+```{r}
+#| echo: false
+#| label: fig-dataDWL
+#| fig-cap: Table with raw data.
+
+DT::datatable(dataDWL, extensions = c('Scroller', 'Buttons'), rownames = FALSE,
+              options = list(deferRender = F, dom = 'Bt', scrollY = 452, scroller = TRUE, scrollX = T, pageLength = 10, buttons = 
+      list(list(
+        extend = 'csv',
+        filename = 'weight'
+      ), list(
+        extend = 'excel',
+        filename = 'weight',
+        title = NULL
+      ))))
+
+```
+
+
