--- a/lab1.qmd
+++ b/lab1.qmd
@@ -1,4 +1,4 @@
-# LAB I: Introduction to Jamovi {#sec-lab1}
+# LAB I: Introduction to Jamovi and data preparation {#sec-lab1}
 
 ```{r}
 #| include: false
@@ -13,17 +13,14 @@ library(readxl)
 rses <- read_excel(here("data", "rses.xlsx"))
 ```
 
-When we have finished this Lab, we should be able to:
-
 ::: {.callout-caution icon="false"}
 ## `r fa("circle-dot", prefer_type = "regular", fill = "red")` Learning objectives
 
--   Navigate Jamovi, import files and transform the data.
--   Filter data.
--   Compute new variables based on other variables in our data.
--   Transform existing variables.
+-   Navigate Jamovi and import datasets.
+-   Filter rows in the data for focused analysis.
+-   Transform existing variables to prepare data for analysis.
+-   Compute new variables based on other variables in the dataset.
 :::
-
 
 ## Why Jamovi?
 
@@ -34,10 +31,11 @@ Jamovi is a new fee open "3rd generation" statistical software that is built on 
 ::: {.callout-note icon="false"}
 ## **Some other advantages are:**
 
-1.  Point-and-click environment
-2.  It provides informative tables and neat visuals
-3.  Enables integration with R
-4.  Gives access to a user guide and community resources from the Jamovi website
+1.  User-friendly point-and-click interface.
+2.  Displays informative tables and clear visuals.
+3.  Supports add-on modules for advanced statistical analysis.
+4.  Allows integration with R.
+5.  Provides access to a user guide and community resources on the Jamovi website.
 :::
 
 ## Downloading and installing Jamovi
@@ -74,7 +72,7 @@ Let's take a quick look at the Jamovi Main Menu, referred to hereafter as the **
 knitr::include_graphics(here::here("images", "menu1.png"))
 ```
 
-There are six tabs in the Menu (from left to right): **File** (a layer with three horizontal levels $\equiv$), **Variables**, **Data**, **Analyses**, **Edit**, and **Settings** (the three dots $\vdots$ at the top right of the window) tabs. A toolbar appears whenever we click on a Menu tab (@tbl-menu).
+There are six tabs in the Menu (from left to right): 1. File (a layer with three horizontal levels $\equiv$), 2. Variables, 3. Data, 4. Analyses, 5. Edit, and 6. Settings (the three dots $\vdots$ at the top right of the window) tabs. A toolbar appears whenever we click on a Menu tab (@tbl-menu).
 
  
 
@@ -143,7 +141,7 @@ There are six tabs in the Menu (from left to right): **File** (a layer with thre
 |                                                                                                                                                             |                                                                                                                                                     |
 |     It includes the application settings that can be manged by the users according to their preferences.                                                    | -   If we want to learn R, we can also display the R syntax.                                                                                        |
 |                                                                                                                                                             |                                                                                                                                                     |
-|                                                                                                                                                             | -   Our graph colour scheme                                                                                                                         |
+|                                                                                                                                                             | -   Our graph color scheme.                                                                                                                         |
 |                                                                                                                                                             |                                                                                                                                                     |
 |                                                                                                                                                             | -   Our default missing value.                                                                                                                      |
 +-------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
@@ -204,16 +202,34 @@ It is possible to simply begin typing values into the Jamovi spreadsheet as we w
 #| fig-cap: Table with raw data.
 
 DT::datatable(rses, extensions = c('Scroller', 'Buttons'), rownames = FALSE,
-              options = list(deferRender = F, dom = 'Bt', columnDefs = list(list(className = 'dt-center', targets = 1:6)), scrollY = 452, scroller = TRUE, scrollX = T, pageLength = 10, buttons = 'csv'))
+              options = list(deferRender = F, dom = 'Bt', scrollY = 452, scroller = TRUE, scrollX = T, pageLength = 10, buttons = 
+      list(list(
+        extend = 'csv',
+        filename = 'rses'
+      ))))
 
 ```
 
+(**NOTE:** You can find other formats of the data (OMV, Excel) at the link: <https://osf.io/gvctz/>).
+
+   
+
 The meta-data (data about the data) for this dataset are as following:
 
-1.  **sex:** sex (1 = male, 2 = female)
-2.  **age:** age in years
-3.  **time_spend:** hours spent on social media
-4.  $q_1 ... q_{10}$: Ten questions (items) of Rosenberg Self-Esteem Scale (RSES). The 10 items are answered on a four point scale ranging from strongly disagree to strongly agree.(0 = Strongly Disagree, 1 = Disagree, 2 = Agree, 3 = Strongly Agree)
+1.  **sex:** sex (1 = male, 2 = female).
+2.  **age:** age in years.
+3.  **time_spend:** hours spent on social media.
+4.  $q_1 ... q_{10}$: Ten questions (items) of Rosenberg Self-Esteem Scale (RSES). The 10 items are answered on a four point scale ranging from strongly agree to strongly disagree coded as follows: Strongly Agree = 3, Agree = 2, Disagree = 1, and Strongly Disagree = 0.
+
+-   Positively worded Items 1, 2, 4, 6, and 7.
+
+-   Negatively worded Items 3, 5, 8, 9, and 10 (codes should be reversed).
+
+![Codes should be reversed for the negatively worded Items.](images/rsescode.png){#fig-rsescode}
+
+The scale ranges from 0-30 (we add the scores for all items), with 30 indicating the highest total score possible.
+
+More information for the RSES: [Rosenberg Self-Esteem Scale](https://socy.umd.edu/about-us/using-rosenberg-self-esteem-scale).
 
 ### Opening the file
 
@@ -258,16 +274,224 @@ knitr::include_graphics(here::here("images", "dataset.png"))
 
 As we can see this is a data set with `r nrow(rses)` observations and `r ncol(rses)` variables. JAMOVI has classified all the variables as nominal ![](images/nominal.png){width="24" height="22"}; however, only the `sex` variable is actually nominal.
 
-## Transforming data
+## Adding labels to codes
 
-### Changing the measure type
+-   **sex variable**
 
-First, we will change the measure type from nominal to continuous for all variables except `sex`. For example, double-click on the variable name `age`. This will open an additional menu at the top of the JAMOVI screen, as shown in @fig-type_age:
+The first variable, named `sex`, is a categorical variable coded as 1 for males and 2 for females. Notice that it is correctly identified as a nominal ![](images/nominal.png){width="24" height="22"} variable in Jamovi.
 
-![Extra menu for data variables.](images/type_age.png){#fig-type_age width="90%"}
+We can assign labels to numerically coded values of categorical variables, such as `sex`, by accessing the data variable settings. One way to achieve this is by double-clicking on the variable name `sex`, which opens the additional menu of variable settings at the top of the Jamovi screen (@fig-labels0).
+
+![An additional menu appears at the top of the Jamovi screen after double-clicking on the variable name sex.](images/labels0.png){#fig-labels0}
+
+ 
+
+In this menu, we will find the *Levels* setup. Here, we can specify the labels that should appear for each category level. Click on the number "1" in the *Levels* box to edit its label, changing it from "1" to "male". Similarly, click on the number "2" and change it to "female" (@fig-labels).
+
+![Adding labels to numerically coded Values.](images/labels.png){#fig-labels}
+
+Notice how the numbers "1" and "2" have moved to the lower right under the text we're typing, allowing us to still see which label corresponds to each numerical code. Press `Enter` or click anywhere outside the labels box to save these labels.
+
+We close the variable settings by pressing the arrow in the top-right corner ![](images/up_arrow.png){width="25" height="25"}.
+
+## Changing the measure type
+
+Next, we will change the measure type of `age` and `time_spent` variables from nominal to continuous.
+
+-   **age variable**
+
+Double-click on the variable name `age` to open the data variable settings, as shown in @fig-type_age:
+
+![Data variable menu settings for the age variable.](images/type_age.png){#fig-type_age width="90%"}
+
+ 
 
 From the drop-down list of "Measure type" we select the continuous type ![](images/continuous.png){width="23" height="21"}, as shown in @fig-type_age2.
 
-![Extra menu for data variables.](images/type_age2.png){#fig-type_age2 width="80%"}
+![Change the measure type of age from nominal to continuous. .](images/type_age2.png){#fig-type_age2 width="80%"}
 
-The categorical variable `sex` is coded as 1 for males and 2 for females, and it is stored as nominal ![](images/nominal.png){width="24" height="22"}.
+ 
+
+-   **time_spent variable**
+
+Instead of closing the data variable menu using the arrow in the top-right corner, we can click on the ![](images/greater.png){width="25" height="25"} to proceed to the next variable setting, `time_spent`. As before, we select the continuous type for this variable from the "Measure type" drop-down list, as shown in @fig-time.
+
+![Change the measure type of time_spent from nominal to continuous.](images/time.png){#fig-time width="80%"}
+
+We close the variable settings by pressing the arrow in the top-right corner ![](images/up_arrow.png){width="25" height="25"}.
+
+ 
+
+-   **q1 to q10 variables**
+
+Finally, we will change the measure type of `q1` to `q10` variables from nominal to ordinal. In the Variables tab, we select the checkboxes for the `q1` through `q10` variables, as shown in @fig-q1_10.
+
+![Change the measure type of time_spent from nominal to continuous.](images/q1_10.png){#fig-q1_10 width="60%"}
+
+ 
+
+After that, we click on the Edit button ![](images/edit.png){width="36" height="40"} to open the data variable settings, as shown in @fig-multiple_q1_10.
+
+![Change the measure type of time_spent from nominal to continuous.](images/multiple_q1_10.png){#fig-multiple_q1_10}
+
+ 
+
+From the drop-down list of "Measure type" we select the ordinal type ![](images/ordinal.png){width="23" height="21"}, as shown in @fig-ordinal_multipleq1_10.
+
+![Change the measure type of q1 to q10 from nominal to ordinal.](images/ordinal_multipleq1_10.png){#fig-ordinal_multipleq1_10 width="80%"}
+
+ 
+
+## Filtering rows
+
+Next, we select the **Filters button** ![](images/filters.png){width="30" height="28"} from the **Data** tab. This opens the "Row FILTERS" view at the top of the Jamovi screen where we can add a filter called "**Filter 1**" (@fig-filter1_age). Let's say that we want to study only the adults from the participants in this survey.
+
+-   **Simple condition**
+
+In order to access functions, press the ![](images/fx.png){width="30" height="28"} icon in the filter settings and from "**VARIABLES**" double-click on `age` (or we just type the variable name but if the variable has a space, we must use ticks `''` around the variable name). Then type the condition `age >= 18` in the formula box and press **ENTER** from the keyboard (@fig-filter1_age).
+
+![Adding a filter.](images/filter1_age.png){#fig-filter1_age}
+
+ 
+
+::: callout-tip
+## Relational (or comparison) operators in Jamovi
+
+| **symbol** | **read as**              |
+|------------|:-------------------------|
+| \<         | less than                |
+| \>         | greater than             |
+| ==         | equal to                 |
+| \<=        | less than or equal to    |
+| \>=        | greater than or equal to |
+| !=         | not equal to             |
+:::
+
+ 
+
+Notice that a column named `Filter 1` has been added to the Spreadsheet view. Cells that meet the condition `age >= 18` are checked with a green tick ![](images/tick.png){width="24" height="21"}, while the rest have a red x symbol ![](images/x.png){width="24" height="21"}. Lines with an `X` are grayed out indicating that these observations are now outside of the current dataset.
+
+There is also a switch where we can activate ![](images/active.png){width="27" height="20"} or inactivate ![](images/inactive.png){width="27" height="20"} the filter (note that an inactivate filter will remain visible and can be toggled to active at any time).
+
+It is also possible to hide all filter columns by clicking on the eye symbol ![](images/eye.png){width="26" height="23"} of the filters. In this case, all filters and the filtered data will remain active but will be invisible.
+
+Finally, if we want to delete the filter permanently, we can click on the ![](images/x_del.png){width="27" height="20"} of the filter .
+
+ 
+
+-   **Multiple conditions**
+
+But we can do more complicated filters than this! Let's say that we're interested in the **adult females**. In fact we can specify this in three ways:
+
+**a)** by using the `and` operator in "**Filter 1**" which means that both conditions (adults and females) in the expression must be true at the same time. Therefore, we type the expression `age >= 18 and sex == 'female'` (@fig-filter1_age_and_sex):
+
+![Combining conditions with "and" operator in one expression.](images/filter1_age_and_sex.png){#fig-filter1_age_and_sex}
+
+Note that in the above expression we can also use double quotes around the `"female"` (i.e., `age >= 18 and sex == "female"`) or even the coded value (i.e., `age >= 18 and sex == 2`).
+
+**b)** by adding the second condition (i.e. `sex == "female"`) as **another expression** to "**Filter 1**" (by clicking the small `+` beside the first expression) (@fig-filter1_age_sex):
+
+![Multiple expressions in the same filter.](images/filter1_age_sex.png){#fig-filter1_age_sex}
+
+This additional expression comes to be represented with its own column `F1(2)` (@fig-filter1_age_sex), and by looking at the ticks and crosses, we can see which expression is responsible for excluding each row.
+
+**c)** adding a new "**Filter 2**" (by selecting the **large +** to the left of the filters dialog box) (@fig-filter2). In this case, we can activate or inactivate the filters separately.
+
+![Multiple expressions using multiple filters.](images/filter2.png){#fig-filter2}
+
+We close the filter settings by pressing the arrow in the top-right corner ![](images/up_arrow.png){width="25" height="25"}.
+
+::: callout-important
+Filters in Jamovi exclude the rows for which the expression is not true. When filters are active, **all results** will be based on the filtered data. If we want to see unfiltered results we will either need to delete the filter or toggle it to inactive.
+:::
+
+ 
+
+## Transforming a variable
+
+### Transform a quantitative variable into a qualitative variable
+
+Sometimes it can be useful to convert a quantitative variable into a qualitative variable with levels. For example, the `time_spent` can be categorized as follows:
+
+-   less than or equal to 3 `r fa("arrow-right", fill = "orange")` "0-3"
+
+-   4 to 7 `r fa("arrow-right", fill = "orange")` "4-7"
+
+-   8 to 11 `r fa("arrow-right", fill = "orange")` "8-11"
+
+-   greater than 11 `r fa("arrow-right", fill = "orange")` "\>11"
+
+Select `time_spent` variable and click the Transform button ![](images/transform_button.png){width="40" height="36"} from the toolbar of the Data tab. This opens the "**TRANSFORMED VARIABLE**" view, where we can set the name of the transformed variable such as `time_spent2` and create the transformation. To do this, select the source variable, the `time_spent` in this case, in the *Source Variable* field and create a new transformation using transform field (@fig-create_new_transf), which is initially set to 'none'.
+
+![Setting up a new transformation of a variable.](images/create_new_transf.png){#fig-create_new_transf}
+
+ 
+
+This opens the "TRANSFORM" view where Jamovi gives each transformation a name (e.g., `Transform 1`; if we want we can change it). This allows us to use it again later on other variables if we wish. We can also add a description (@fig-transf_view).
+
+![Box for adding conditions to the transformation.](images/transf_view.png){#fig-transf_view width="60%"}
+
+Now we need to **add conditions**. Jamovi uses simple `if ... else` statements and executes each statement starting from the top. So let's start!
+
+First, select **`+ Add recode condition`**. Second, we need to fill the **boxes** with the information as follows (@fig-recode1):
+
+-   The **`$source`** is the variable we want to transform (here `time_spent`)- don't change this.
+-   Select the appropriate **comparison operator** (here `<=` )
+-   In the next box, we will put the `time_spent` value we want as the cut off point (e.g., 3).
+-   After the use, add our new label (here `'0-3'`). If we are using text we must enclose it in `'...'`
+
+![Adding the first condition (0-3).](images/recode1.png){#fig-recode1}
+
+ 
+
+We can add as many conditions as we want by selecting `+ Add recode condition`. This will add a new `if $source` line into the box (@fig-recode2). Remember they will be executed in order.
+
+![Adding the second condition (4-7).](images/recode2.png){#fig-recode2}
+
+ 
+
+![Adding the third condition (8-11).](images/recode3.png){#fig-recode3}
+
+ 
+
+Finally, after the `else use` box just add the label for the data that does not meet the above conditions (here `'>11'`), as shown in @fig-recode4.
+
+![Adding the final label for the data that does not meet the above conditions (\>11).](images/recode4.png){#fig-recode4}
+
+ 
+
+### Reverse scoring of items
+
+To compute the total score for all items of the RSES, we first need to reverse the scores of the negatively worded questions (3, 5, 8, 9, and 10). To do this, we can follow these simple steps.
+
+In the Variables tab, we select the checkboxes for the `q3`, `q5`, `q8`, `q9`, and `q10` variables, as shown in @fig-rev_items.
+
+![Select the variables to be reversed.](images/rev_items.png){#fig-rev_items width="60%"}
+
+ 
+
+After that, we click on the Transform button ![](images/transform_button.png){width="40" height="36"}) from the toolbar of the Variables tab to open the Transform variable settings. Then, we `Create New Transform`, as shown in @fig-new_transf.
+
+![Open the Transform variable settings.](images/new_transf.png){#fig-new_transf width="60%"}
+
+ 
+
+In the Transform view, we enter `_R` as a suffix for the variable names and specify `3-$source` in the condition box, as shown in @fig-transform2.
+
+![Transform variable settings.](images/transform2.png){#fig-transform2 width="60%"}
+
+![Data with the reversed variables.](images/reversed_data.png){#fig-reversed_data width="60%"}
+
+ 
+
+## Compute a new variable
+
+Finally, we compute each participant's total score (ranging from 0 to 30) based on their responses to the 10 questions of the Rosenberg Self-Esteem Scale.
+
+Adding computed variables to a Jamovi spreadsheet is straightforward. Click on the Compute button ![](images/compute_button.png){width="40" height="36"}) from the toolbar of the Data tab. An empty column has been created at the end of our dataset (@fig-compute1). The black dot symbol in the right of the column header indicates that this is a computed variable.
+
+![Compute a new variable.](images/compute1.png){#fig-compute1 width="60%"}
+
+To set up the computed variable, either double-click the column header, or click the **Setup** button ![](images/setup_button.png){width="34" height="36"}) in the **Data** tab. This opens the "**COMPUTED VARIABLE**" view, where we can name the computed variable `score`. Next, we select the `SUM` function from the available options for use in the **Formula** box. Finally, we add the `q`-variables in the formula separated by comma (note that we must use the reversed variables in the sum) and we press `ENTER` (@fig-sum_score).
+
+![Computation of the total score.](images/sum_score.png){#fig-sum_score}
