--- a/presentations.qmd
+++ b/presentations.qmd
@@ -16,7 +16,6 @@
 
      
 
-
 -   **Lecture 3: Probability Distributions**
 
 ![psy-300-3_distributions](presentations/psy-300-3_distributions.pdf){width="60%" height="400"}
@@ -24,4 +23,9 @@
      
 
 
+-   **Lecture 4: Sampling Distribution and Confidence Interval**
+
+![psy-300-4_sampling_distribution](presentations/psy-300-4_sampling_distribution.pdf){width="60%" height="400"}
+
+     
 
