--- a/presentations.qmd
+++ b/presentations.qmd
@@ -22,10 +22,19 @@
 
      
 
-
 -   **Lecture 4: Sampling Distribution and Confidence Interval**
 
 ![psy-300-4_sampling_distribution](presentations/psy-300-4_sampling_distribution.pdf){width="60%" height="400"}
 
      
+
+
+-   **Lecture 5: Hypothesis testing**
+
+![psy-300-5_hypothesis_testing](presentations/psy-300-5_hypothesis_testing.pdf){width="60%" height="400"}
+
+     
+
+
+
 
