--- a/presentations.qmd
+++ b/presentations.qmd
@@ -28,7 +28,6 @@
 
      
 
-
 -   **Lecture 5: Hypothesis testing**
 
 ![psy-300-5_hypothesis_testing](presentations/psy-300-5_hypothesis_testing.pdf){width="60%" height="400"}
@@ -36,5 +35,8 @@
      
 
 
+-   **Lecture 6: Hypothesis testing for two samples**
 
+![psy-300-6_two_samples](presentations/psy-300-6_two_samples.pdf){width="60%" height="400"}
 
+     
